@@ -5,6 +5,9 @@ Changelog
 1.0b3 (unreleased)
 ------------------
 
+- Add installed upgrades to transaction note. Closes #7
+  [jone]
+
 - Add ``migrate_class`` helper with _p_changed implementation supporting BTreeFolder2Base containers.
   [jone]
 
